# demo-jenkins-docker

./: .gitignore  Dockerfile  Jenkinsfile  LICENSE  docker-compose.yml  pyproject.toml
greetings/: __main__.py  say.py
tests/: test_say_name.py
