[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
addopts = "--doctest-modules"

[project]
name = "greetings"
version = "0.1.0"
description = "My first Python project"
authors = [{ name = "Your Name", email = "cybertronix.4406@gmail.com" }]
license = { file = "LICENSE" }

dependencies = [
    "pytest",
]

[project.scripts]
greeting = "greetings.__main__:cli"